--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # Ignore the data directory
 data
 uploads
+
+# Ignore files created by the Plant Patents update procedura
+fcrepo_urls.csv
+file_metadata.csv
+scans_metadata.csv
